# BazelMixedLanguage

./: .bazelrc  .bazelversion  .gitignore  README.md  WORKSPACE  go_repositories.bzl
android/: BUILD
android/demo/: .project  settings.gradle
android/demo/app/: .project  build.gradle
android/demo/app/src/androidTest/java/net/xiaobaiai/app/: ExampleInstrumentedTest.java
android/demo/app/src/main/: AndroidManifest.xml  BUILD
android/demo/app/src/main/java/net/xiaobaiai/app/: APIsTest.java  MainActivity.java
android/demo/app/src/test/java/net/xiaobaiai/app/: ExampleUnitTest.java
android/demo/gradle/wrapper/: gradle-wrapper.properties
android/java/com/xiaobaiai/test/: CommonStatus.java  Test.java
android/java/net/xiaobaiai/test/: APIs.java  CStruct.java  CommonStatus.java  MyRect.java  PointHandle.java  StaticMethods.java
android/java/net/xiaobaiai/test/base/: Point2D.java
android/jni/: com_xiaobaiai_test_Test.cpp  jni_caching.cpp  jni_caching.h  jni_common.cpp  jni_common.h  logger.h  mock_sdk.c  mock_sdk.h  net_xiaobaiai_test_APIs.cpp
bazels/: gen_jni_header.bzl  my_repository_rules.bzl  spdlog.BUILD
cpp/core/logger/: BUILD  logger.cpp  logger.h
golang/: BUILD  go.mod
golang/cmd/hello/: BUILD.bazel  main.go
golang/cmd/hello/cli/: BUILD.bazel  root.go  version.go
toolchain/: BUILD  cc_toolchain_config.bzl
toolchains/: BUILD  my_cc_toolchain_config.bzl
toolchains/cpp/: BUILD  generate.bzl  my_cc_toolchain_config.bzl  register.bzl  supported.bzl
toolchains/cpp/features/: linker.bzl
